6.0.0
-----
* Total refactoring of the framework
* SVG board diagrams are now compatible with major web browsers
* Added rule selection in text graph by mouse click
* Object tree and console can now auto-import missing modules

5.0.0
-----
* Near complete refactoring of the framework
* Engine commands are now available directly in the console as functions
* Added miscellaneous features to the object tree dialog
* Added more rules to the board diagram

4.1.0
-----
* Added steno order inversions to the board diagram
* Exceptions no longer crash the program if stderr is unavailable
* Improved SVG rendering code
* Improved object tree dialog appearance and capabilities

4.0.0
-----
* Added user-configurable file for other steno systems/languages
* Added Python object tree dialog for debugging
* Improved lexer performance moderately

3.1.0
-----
* Dramatically improved index load time and memory usage at a slight cost on lookups
* Moved interactive console tool into a separate dialog window

3.0.0
-----
* Added index support and search for example translations by rule
* Added multi-threading to stop GUI from hanging at startup
* Added better support for parallel processing on large operations

2.1.0
-----
* Simplified core engine code
* Improved handling of GUI menu and tools
* Fixed several minor bugs
* Fixed pre-premature exception handling bug in engine

2.0.0
-----
* Dismantled application subclasses and moved code into components for modularity
* Compartmentalized all components into functional groups
* Added rule search with "/" prefix in the search window
* Fixed premature exception handling bug in engine

1.0.0
-----
* Completely reorganized component system
* Added parallel processing to batch mode
* Added link to show more results at the end of search lists
* Ctrl + mouse wheel now changes the font size in the search window
* General optimizations made on core (non-GUI) components

0.6.1
-----
* Added most major steno rules to the board diagram