@@ -12,15 +12,19 @@
 
   # right bank
   ".rf":   ["-FR",  "(.r)(.f)",     ["INV"], "f/r inversion"],
+  ".rph":  ["-FR",  "(.r)(.ph)",    ["INV"], "f/r inversion"],
   ".lf":   ["-FL",  "(.l)(.f)",     ["INV"], "f/l inversion"],
   ".lph":  ["-FL",  "(.l)(.ph)",    ["INV"], "f/l inversion"],
+  ".lv":   ["-FL",  "(.l)(.v)",     ["INV"], "f/l inversion"],
   ".tl":   ["-LT",  "(.t)(.l)",     ["INV"], "l/t inversion"],
   ".tal":  ["-LT",  "(.t)a(.l)",    ["INV"], "l/t inversion"],
   ".tel":  ["-LT",  "(.t)e(.l)",    ["INV"], "l/t inversion"],
+  ".pr":   ["-RP",  "(.p)(.r)",     ["INV"], "r/p inversion"],
   ".br":   ["-RB",  "(.b)(.r)",     ["INV"], "r/b inversion"],
   ".cr":   ["-RBG", "(.c)(.r)",     ["INV"], "r/c inversion"],
   ".kr":   ["-RBG", "(.k)(.r)",     ["INV"], "r/k inversion"],
   ".xtr":  ["-RBGS","(.x)t(.r)",    ["INV"], "r/x inversion"],
+  ".gr":   ["-RG",  "(.g)(.r)",     ["INV"], "r/g inversion"],
   ".tr":   ["-RT",  "(.t)(.r)",     ["INV"], "r/t inversion"],
   ".dr":   ["-RD",  "(.d)(.r)",     ["INV"], "r/d inversion"],
 
@@ -34,12 +38,14 @@
   ".mar":  ["-RPL", "(.m)a(.r)",    ["INV"], "folded -ar"],
   ".mer":  ["-RPL", "(.m)(.er)",    ["INV"], "folded -er"],
   ".ner":  ["-RPB", "(.n)(.er)",    ["INV"], "folded -er"],
+  ".ber":  ["-RB",  "(.b)(.er)",    ["INV"], "folded -er"],
   ".ker":  ["-RBG", "(.k)(.er)",    ["INV"], "folded -er"],
   ".ler":  ["-RL",  "(.l)(.er)",    ["INV"], "folded -er"],
   ".ter":  ["-RT",  "(.t)(.er)",    ["INV"], "folded -er"],
   ".ser":  ["-RS",  "(.s)(.er)",    ["INV"], "folded -er"],
   ".cer":  ["-RS",  "(.C)(.er)",    ["INV"], "folded -er"],
   ".der":  ["-RD",  "(.d)(.er)",    ["INV"], "folded -er"],
+  ".cher": ["-FRP", "(.ch)(.er)",   ["INV"], "folded -er"],
   ".ting": ["-GT",  "(.t)(.ing)",   ["INV"], "folded -ing"],
   ".sing": ["-GS",  "(.s)(.ing)",   ["INV"], "folded -ing"],
   ".ding": ["-GD",  "(.d)(.ing)",   ["INV"], "folded -ing"],
