@@ -2,41 +2,43 @@
 
 {
   # left bank
-  "and":    ["SKP",  "and",         ["WORD"], "`and`: purely positional brief; no dependencies on other rules"],
   "is":     ["S",    "i(s.)",       ["WORD"], "common brief"],
-  "it":     ["T",    "i(t.)",       ["WORD"], "common brief"],
-  "this":   ["TH",   "(th.)is",     ["WORD"], "common brief"],
-  "can":    ["K",    "(c.)an",      ["WORD"], "common brief"],
-  "about":  ["PW",   "a(b.)out",    ["WORD"], "common brief"],
-  "had":    ["H",    "(h.)ad",      ["WORD"], "common brief"],
-  "are":    ["R",    "a(r.)e",      ["WORD"], "common brief"],
-  "with":   ["W",    "(w.)ith",     ["WORD"], "common brief"],
+  "and":    ["SKP",  "and",         ["WORD"], "`and`: purely positional brief; no dependencies on other rules"],
+  "just":   ["SKWR", "(j.)ust",     ["WORD"], "common brief"],
   "have":   ["SR",   "ha(v.)e",     ["WORD"], "common brief"],
+  "it":     ["T",    "i(t.)",       ["WORD"], "common brief"],
   "did":    ["TK",   "(d.)id",      ["WORD"], "common brief"],
-  "if":     ["TP",   "i(f.)",       ["WORD"], "common brief"],
-  "will":   ["HR",   "wil(l.)",     ["WORD"], "common brief"],
-  "in":     ["TPH",  "i(n.)",       ["WORD"], "common brief"],
-  "why":    ["KWR",  "wh(y.)",      ["WORD"], "common brief"],
   "go":     ["TKPW", "(g.)o",       ["WORD"], "common brief"],
+  "if":     ["TP",   "i(f.)",       ["WORD"], "common brief"],
+  "in":     ["TPH",  "i(n.)",       ["WORD"], "common brief"],
   "from":   ["TPR",  "(f.)(r.)om",  ["WORD"], "common brief"],
+  "this":   ["TH",   "(th.)is",     ["WORD"], "common brief"],
   "there":  ["THR",  "(th.)e(r.)e", ["WORD"], "common brief"],
+  "can":    ["K",    "(c.)an",      ["WORD"], "common brief"],
+  "why":    ["KWR",  "wh(y.)",      ["WORD"], "common brief"],
+  "about":  ["PW",   "a(b.)out",    ["WORD"], "common brief"],
+  "with":   ["W",    "(w.)ith",     ["WORD"], "common brief"],
+  "had":    ["H",    "(h.)ad",      ["WORD"], "common brief"],
+  "will":   ["HR",   "wil(l.)",     ["WORD"], "common brief"],
+  "are":    ["R",    "a(r.)e",      ["WORD"], "common brief"],
 
   # right bank
   "of":     ["-F",   "o(.f)",       ["WORD"], "common brief"],
   "ever":   ["-FR",  "e(.v)e(.r)",  ["WORD"], "common brief"],
+  "was":    ["-FS",  "was",         ["WORD"], "`was`: purely positional brief; no dependencies on other rules"],
   "are+":   ["-R",   "a(.r)e",      ["WORD"], "common brief"],
+  "an":     ["-PB",  "a(.n)",       ["WORD"], "common brief"],
   "be":     ["-B",   "(.b)e",       ["WORD"], "common brief"],
   "the":    ["-T",   "(.t)he",      ["WORD"], "common brief"],
-  "was":    ["-FS",  "was",         ["WORD"], "`was`: purely positional brief; no dependencies on other rules"],
 
   # vowels
   "he":     ["E",    "h(e)",        ["WORD"], "common brief"],
   "you":    ["U",    "yo(u)",       ["WORD"], "common brief"],
 
   # left + vowels
-  "they":   ["THE",  "(th.)(e)y",   ["WORD"], "common brief"],
   "very":   ["SRE",  "(v.)(e)ry",   ["WORD"], "common brief"],
   "for":    ["TP-R", "(f.)o(.r)",   ["WORD"], "common brief"],
+  "they":   ["THE",  "(th.)(e)y",   ["WORD"], "common brief"],
 
   # full board
   "were":   ["W-R",  "(w.)e(.r)e",  ["WORD"], "common brief"]
