@@ -50,6 +50,7 @@
     "vOI":    {"txtcenter": [68,  13],  "txtwidth": 50,  "txtspacing": 14.4, "d": "M0,0h96v13a13,13,0,0,1,-13,13h-30a13,13,0,0,1,-13,-13h-14a13,13,0,0,1,-26,0v-13z"},
     "v_v":    {"txtcenter": [83,  13],  "txtwidth": 20,  "txtspacing": 14.4, "d": "M0,0h96v13a13,13,0,0,1,-26,0h-44a13,13,0,0,1,-26,0v-13z"},
     "diag":   {"txtcenter": [28,  27],  "txtwidth": 18,  "txtspacing": 14.4, "d": "M0,30h13l17,-17v-13h26v26h-13l-17,17a13,13,0,0,1,-13,13a13,13,0,0,1,-13,-13v-13z"},
+    "and":    {"txtcenter": [28,  13],  "txtwidth": 50,  "txtspacing": 14.4, "d": "M0,0h43l17,-17v-13h26v26h-13l-17,17a13,13,0,0,1,-13,13h-30a13,13,0,0,1,-13,-13v-13z"},
     "uparrow":  {"d": "M13,4v19zM13,4l-5,5zM13,4l5,5z"},
     "lrarrows": {"d": "M50,8h-44z M50,8l-4,-4z M50,8l-4,4z M6,18h44z M6,18l4,-4z M6,18l4,4z"}},
 "text": {
